// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FederatedSignInButton renders as expected with Facebook provider 1`] = `
<div>
  <button
    class="amplify-button amplify-field-group__control federated-sign-in-button"
    data-fullwidth="false"
    style="font-weight: var(--amplify-font-weights-normal); gap: 1rem;"
    type="button"
  >
    <span
      class="amplify-text"
    >
      Sign in with Facebook
    </span>
  </button>
</div>
`;

exports[`FederatedSignInButton renders as expected with Google provider 1`] = `
<div>
  <button
    class="amplify-button amplify-field-group__control federated-sign-in-button"
    data-fullwidth="false"
    style="font-weight: var(--amplify-font-weights-normal); gap: 1rem;"
    type="button"
  >
    <span
      class="amplify-text"
    >
      Sign in with Google
    </span>
  </button>
</div>
`;

exports[`FederatedSignInButton renders as expected with LoginWithAmazon provider 1`] = `
<div>
  <button
    class="amplify-button amplify-field-group__control federated-sign-in-button"
    data-fullwidth="false"
    style="font-weight: var(--amplify-font-weights-normal); gap: 1rem;"
    type="button"
  >
    <span
      class="amplify-text"
    >
      Sign in with LoginWithAmazon
    </span>
  </button>
</div>
`;

exports[`FederatedSignInButton renders as expected with SignInWithApple provider 1`] = `
<div>
  <button
    class="amplify-button amplify-field-group__control federated-sign-in-button"
    data-fullwidth="false"
    style="font-weight: var(--amplify-font-weights-normal); gap: 1rem;"
    type="button"
  >
    <span
      class="amplify-text"
    >
      Sign in with SignInWithApple
    </span>
  </button>
</div>
`;
